# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.24 2009/09/26 10:22:22 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.5 (2009/??/??)
 - (2009/09/26) Fixed bug#4302 - Dashboard: Tickets Stats graph incorrect
   (permission related).
 - (2009/09/24) Fixed bug#3909 - Optional TicketFreeTimes with AgentTicketCompose
    break when attaching a file
 - (2009/09/23) Fixed bug#4326 - Notification emails have empty lines by using
    opera at creation time.
 - (2009/09/23) Fixed bug#3001 - Agent ticket queue ordering by priority causes
    SQL error.
 - (2009/09/23) Fixed bug#3969 - Role <-> User Admin Screen Refresh Error.
 - (2009/09/23) Fixed bug#3787 - Generic Agent: Send no notifications is not
    working.
 - (2009/09/23) Fixed bug#4222 - Changed Italian translation of "Login As".
 - (2009/09/23) Fixed bug#3923 - Frontend::Output::FilterText###OutputFilterTextAutoLink
    does not work.
 - (2009/09/23) Fixed bug#4226 - "Previous owner" alway empty when a new owner
    must be defined.
 - (2009/09/23) Fixed bug#4322 - Bulk-Action checkboxes are refilled wrongly by
    Firefox-Autocomplete feature.
 - (2009/09/23) Fixed bug#4320 - Javascript-check on empty body not working
    with RichText-Editor (RTE).
 - (2009/09/23) Fixed bug#2936 - $QData{""} and $Quote{""} crashes if a space
    is set between the arguments.
 - (2009/09/22) Fixed bug# 4262 - Encoding issue with Event-based notifications.
 - (2009/09/22) Fixed bug# 1420 - $Text{"User"} instead of $Text{"Username"} in
    AdminUserForm.dtl
 - (2009/09/22) Ensured that plain article body is used for ArticleViewModules
    in AgentTicketZoom.
 - (2009/09/21) Fixed bug#2087 - AgentTicketMove does not consider responsible
    feature.