@@ -1,8 +1,8 @@
 # --
 # Kernel/Modules/AgentTicketAttachment.pm - to get the attachments
-# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketAttachment.pm,v 1.35 2011/09/20 22:02:42 cr Exp $
+# $Id: AgentTicketAttachment.pm,v 1.22.2.1 2009/09/28 07:20:37 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -17,7 +17,7 @@ use warnings;
 use Kernel::System::FileTemp;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.35 $) [1];
+$VERSION = qw($Revision: 1.22.2.1 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -34,11 +34,9 @@ sub new {
     }
 
     # get ArticleID
-    $Self->{ArticleID}         = $Self->{ParamObject}->GetParam( Param => 'ArticleID' );
-    $Self->{FileID}            = $Self->{ParamObject}->GetParam( Param => 'FileID' );
-    $Self->{Viewer}            = $Self->{ParamObject}->GetParam( Param => 'Viewer' ) || 0;
-    $Self->{LoadInlineContent} = $Self->{ParamObject}->GetParam( Param => 'LoadInlineContent' )
-        || 0;
+    $Self->{ArticleID} = $Self->{ParamObject}->GetParam( Param => 'ArticleID' );
+    $Self->{FileID}    = $Self->{ParamObject}->GetParam( Param => 'FileID' );
+    $Self->{Viewer}    = $Self->{ParamObject}->GetParam( Param => 'Viewer' ) || 0;
 
     return $Self;
 }
@@ -56,11 +54,7 @@ sub Run {
     }
 
     # check permissions
-    my %Article = $Self->{TicketObject}->ArticleGet(
-        ArticleID     => $Self->{ArticleID},
-        DynamicFields => 0,
-        UserID        => $Self->{UserID},
-    );
+    my %Article = $Self->{TicketObject}->ArticleGet( ArticleID => $Self->{ArticleID} );
     if ( !$Article{TicketID} ) {
         $Self->{LogObject}->Log(
             Message  => "No TicketID for ArticleID ($Self->{ArticleID})!",
@@ -70,7 +64,7 @@ sub Run {
     }
 
     # check permissions
-    my $Access = $Self->{TicketObject}->TicketPermission(
+    my $Access = $Self->{TicketObject}->Permission(
         Type     => 'ro',
         TicketID => $Article{TicketID},
         UserID   => $Self->{UserID}
@@ -83,7 +77,6 @@ sub Run {
     my %Data = $Self->{TicketObject}->ArticleAttachment(
         ArticleID => $Self->{ArticleID},
         FileID    => $Self->{FileID},
-        UserID    => $Self->{UserID},
     );
     if ( !%Data ) {
         $Self->{LogObject}->Log(
@@ -110,9 +103,9 @@ sub Run {
         # write tmp file
         my $FileTempObject = Kernel::System::FileTemp->new( %{$Self} );
         my ( $FH, $Filename ) = $FileTempObject->TempFile();
-        if ( open( my $ViewerDataFH, '>', $Filename ) ) {
-            print $ViewerDataFH $Data{Content};
-            close $ViewerDataFH;
+        if ( open( DATA, '>', $Filename ) ) {
+            print DATA $Data{Content};
+            close(DATA);
         }
         else {
 
@@ -126,11 +119,11 @@ sub Run {
 
         # use viewer
         my $Content = '';
-        if ( open( my $ViewerFH, "$Viewer $Filename |" ) ) {
-            while (<$ViewerFH>) {
+        if ( open( DATA, "$Viewer $Filename |" ) ) {
+            while (<DATA>) {
                 $Content .= $_;
             }
-            close $ViewerFH;
+            close(DATA);
         }
         else {
             return $Self->{LayoutObject}->FatalError(
@@ -161,29 +154,71 @@ sub Run {
         # set filename for inline viewing
         $Data{Filename} = "Ticket-$Article{TicketNumber}-ArticleID-$Article{ArticleID}.html";
 
-        # safety check only on customer article
-        if ( !$Self->{LoadInlineContent} && $Article{SenderType} ne 'customer' ) {
-            $Self->{LoadInlineContent} = 1;
+        # get charset and convert content to internal charset
+        if ( $Self->{EncodeObject}->EncodeInternalUsed() ) {
+            my $Charset = $Data{ContentType};
+            $Charset =~ s/.+?charset=("|'|)(\w+)/$2/gi;
+            $Charset =~ s/"|'//g;
+            $Charset =~ s/(.+?);.*/$1/g;
+
+            # convert charset
+            if ($Charset) {
+                $Data{Content} = $Self->{EncodeObject}->Convert(
+                    Text => $Data{Content},
+                    From => $Charset,
+                    To   => $Self->{LayoutObject}->{UserCharset},
+                );
+
+                # replace charset in content
+                $Data{Content}     =~ s/$Charset/utf-8/gi;
+                $Data{ContentType} =~ s/$Charset/utf-8/gi;
+            }
         }
 
-        # generate base url
-        my $URL = 'Action=AgentTicketAttachment;Subaction=HTMLView'
-            . ";ArticleID=$Self->{ArticleID};FileID=";
+        # add html links
+        $Data{Content} = $Self->{LayoutObject}->HTMLLinkQuote(
+            String => $Data{Content},
+        );
+
+        # cleanup some html tags to be cross browser compat.
+        $Data{Content} = $Self->{LayoutObject}->RichTextDocumentCleanup(
+            String => $Data{Content},
+        );
 
         # replace links to inline images in html content
         my %AtmBox = $Self->{TicketObject}->ArticleAttachmentIndex(
             ArticleID => $Self->{ArticleID},
-            UserID    => $Self->{UserID},
         );
 
-        # reformat rich text document to have correct charset and links to
-        # inline documents
-        %Data = $Self->{LayoutObject}->RichTextDocumentServe(
-            Data              => \%Data,
-            URL               => $URL,
-            Attachments       => \%AtmBox,
-            LoadInlineContent => $Self->{LoadInlineContent},
-        );
+        # build base url for inline images
+        my $SessionID = '';
+        if ( $Self->{SessionID} && !$Self->{SessionIDCookie} ) {
+            $SessionID = '&' . $Self->{SessionName} . '=' . $Self->{SessionID};
+        }
+        my $AttachmentLink = $Self->{LayoutObject}->{Baselink}
+            . 'Action=AgentTicketAttachment&Subaction=HTMLView'
+            . '&ArticleID='
+            . $Self->{ArticleID}
+            . $SessionID
+            . '&FileID=';
+
+        # replace inline images in content with runtime url to images
+        $Data{Content} =~ s{
+            "cid:(.*?)"
+        }
+        {
+            my $ContentID = $1;
+
+            # find matching attachment and replace it with runtlime url to image
+            for my $AttachmentID ( keys %AtmBox ) {
+                next if $AtmBox{$AttachmentID}->{ContentID} !~ /^<$ContentID>$/i;
+                $ContentID = $AttachmentLink . $AttachmentID;
+                last;
+            }
+
+            # return new runtime url
+            '"' . $ContentID . '"';
+        }egxi;
 
         # return html attachment
         return $Self->{LayoutObject}->Attachment(%Data);
