@@ -1,8 +1,8 @@
 # --
 # Kernel/Modules/CustomerTicketAttachment.pm - to get the attachments
-# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CustomerTicketAttachment.pm,v 1.30 2011/12/08 14:06:42 mg Exp $
+# $Id: CustomerTicketAttachment.pm,v 1.17.2.1 2009/09/28 07:20:37 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -15,7 +15,7 @@ use strict;
 use warnings;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.30 $) [1];
+$VERSION = qw($Revision: 1.17.2.1 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -25,20 +25,15 @@ sub new {
     bless( $Self, $Type );
 
     # check needed objects
-    for (
-        qw(ParamObject DBObject TicketObject LayoutObject LogObject ConfigObject EncodeObject UserObject)
-        )
-    {
+    for (qw(ParamObject DBObject TicketObject LayoutObject LogObject ConfigObject UserObject)) {
         if ( !$Self->{$_} ) {
             $Self->{LayoutObject}->FatalError( Message => "Got no $_!" );
         }
     }
 
     # get ArticleID
-    $Self->{ArticleID}         = $Self->{ParamObject}->GetParam( Param => 'ArticleID' );
-    $Self->{FileID}            = $Self->{ParamObject}->GetParam( Param => 'FileID' );
-    $Self->{LoadInlineContent} = $Self->{ParamObject}->GetParam( Param => 'LoadInlineContent' )
-        || 0;
+    $Self->{ArticleID} = $Self->{ParamObject}->GetParam( Param => 'ArticleID' );
+    $Self->{FileID}    = $Self->{ParamObject}->GetParam( Param => 'FileID' );
 
     return $Self;
 }
@@ -51,7 +46,7 @@ sub Run {
         my $Output = $Self->{LayoutObject}->CustomerHeader( Title => 'Error' );
         $Output .= $Self->{LayoutObject}->CustomerError(
             Message => 'FileID and ArticleID are needed!',
-            Comment => 'Please contact your administrator'
+            Comment => 'Please contact your admin'
         );
         $Self->{LogObject}->Log(
             Message  => 'FileID and ArticleID are needed!',
@@ -62,16 +57,12 @@ sub Run {
     }
 
     # check permissions
-    my %Article = $Self->{TicketObject}->ArticleGet(
-        ArticleID     => $Self->{ArticleID},
-        DynamicFields => 0,
-    );
-
+    my %Article = $Self->{TicketObject}->ArticleGet( ArticleID => $Self->{ArticleID} );
     if ( !$Article{TicketID} ) {
         my $Output = $Self->{LayoutObject}->CustomerHeader( Title => 'Error' );
         $Output .= $Self->{LayoutObject}->CustomerError(
             Message => "No TicketID for ArticleID ($Self->{ArticleID})!",
-            Comment => 'Please contact your administrator'
+            Comment => 'Please contact your admin'
         );
         $Self->{LogObject}->Log(
             Message  => "No TicketID for ArticleID ($Self->{ArticleID})!",
@@ -82,7 +73,7 @@ sub Run {
     }
 
     # check permission
-    my $Access = $Self->{TicketObject}->TicketCustomerPermission(
+    my $Access = $Self->{TicketObject}->CustomerPermission(
         Type     => 'ro',
         TicketID => $Article{TicketID},
         UserID   => $Self->{UserID}
@@ -95,13 +86,12 @@ sub Run {
     my %Data = $Self->{TicketObject}->ArticleAttachment(
         ArticleID => $Self->{ArticleID},
         FileID    => $Self->{FileID},
-        UserID    => $Self->{UserID},
     );
     if ( !%Data ) {
         my $Output = $Self->{LayoutObject}->CustomerHeader( Title => 'Error' );
         $Output .= $Self->{LayoutObject}->CustomerError(
             Message => "No such attachment ($Self->{FileID})!",
-            Comment => 'Please contact your administrator'
+            Comment => 'Please contact your admin'
         );
         $Self->{LogObject}->Log(
             Message  => "No such attachment ($Self->{FileID})! May be an attack!!!",
@@ -125,29 +115,71 @@ sub Run {
         # unset filename for inline viewing
         $Data{Filename} = "Ticket-$Article{TicketNumber}-ArticleID-$Article{ArticleID}.html";
 
-        # safety check only on customer article
-        if ( !$Self->{LoadInlineContent} && $Article{SenderType} ne 'customer' ) {
-            $Self->{LoadInlineContent} = 1;
+        # get charset and convert content to internal charset
+        if ( $Self->{EncodeObject}->EncodeInternalUsed() ) {
+            my $Charset = $Data{ContentType};
+            $Charset =~ s/.+?charset=("|'|)(\w+)/$2/gi;
+            $Charset =~ s/"|'//g;
+            $Charset =~ s/(.+?);.*/$1/g;
+
+            # convert charset
+            if ($Charset) {
+                $Data{Content} = $Self->{EncodeObject}->Convert(
+                    Text => $Data{Content},
+                    From => $Charset,
+                    To   => $Self->{LayoutObject}->{UserCharset},
+                );
+
+                # replace charset in content
+                $Data{Content}     =~ s/$Charset/utf-8/gi;
+                $Data{ContentType} =~ s/$Charset/utf-8/gi;
+            }
         }
 
-        # generate base url
-        my $URL = 'Action=CustomerTicketAttachment;Subaction=HTMLView'
-            . ";ArticleID=$Self->{ArticleID};FileID=";
+        # add html links
+        $Data{Content} = $Self->{LayoutObject}->HTMLLinkQuote(
+            String => $Data{Content},
+        );
+
+        # cleanup some html tags to be cross browser compat.
+        $Data{Content} = $Self->{LayoutObject}->RichTextDocumentCleanup(
+            String => $Data{Content},
+        );
 
         # replace links to inline images in html content
         my %AtmBox = $Self->{TicketObject}->ArticleAttachmentIndex(
             ArticleID => $Self->{ArticleID},
-            UserID    => $Self->{UserID},
         );
 
-        # reformat rich text document to have correct charset and links to
-        # inline documents
-        %Data = $Self->{LayoutObject}->RichTextDocumentServe(
-            Data              => \%Data,
-            URL               => $URL,
-            Attachments       => \%AtmBox,
-            LoadInlineContent => $Self->{LoadInlineContent},
-        );
+        # build base url for inline images
+        my $SessionID = '';
+        if ( $Self->{SessionID} && !$Self->{SessionIDCookie} ) {
+            $SessionID = '&' . $Self->{SessionName} . '=' . $Self->{SessionID};
+        }
+        my $AttachmentLink = $Self->{LayoutObject}->{Baselink}
+            . 'Action=CustomerTicketAttachment&Subaction=HTMLView'
+            . '&ArticleID='
+            . $Self->{ArticleID}
+            . $SessionID
+            . '&FileID=';
+
+        # replace inline images in content with runtime url to images
+        $Data{Content} =~ s{
+            "cid:(.*?)"
+        }
+        {
+            my $ContentID = $1;
+
+            # find matching attachment and replace it with runtlime url to image
+            for my $AttachmentID ( keys %AtmBox ) {
+                next if $AtmBox{$AttachmentID}->{ContentID} !~ /^<$ContentID>$/i;
+                $ContentID = $AttachmentLink . $AttachmentID;
+                last;
+            }
+
+            # return link
+            '"' . $ContentID . '"';
+        }egxi;
 
         # return html attachment
         return $Self->{LayoutObject}->Attachment(%Data);
